--- a/source/sass/mixins/_base.scss
+++ b/source/sass/mixins/_base.scss
@@ -8,7 +8,63 @@ body {
 }
 
 * {
-    box-sizing: border-box;
+    @include box-sizing(border-box);
+}
+
+// hide all screen reader elements
+.sr-only {
+    display: none;
+}
+
+.main-wrapper {
+    @include clearfix();
+}
+
+.global-header {
+    background-color: $blue-gray;
+    border: 1px solid $blue-gray;
+    width: 100%;
+    height: 4.5em;
+    @include clearfix();
+
+    .nav-menu {
+        cursor: pointer;
+        color: $blue;
+        float: left;
+
+        i {
+            font-size: 3.5em;
+            line-height: 1.25em;
+        }
+
+        &:hover {
+            color: $blue-dark;
+        }
+    }
+
+    .steps {
+        float: left;
+        display: none;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-weight: 400;
+        font-size: 1.1em;
+        color: $gray-dark;
+    }
+}
+
+nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    @include transform-translate(-100%, null);
+    background-color: $white;
+    width: 20em;
+
+    transition: 300ms ease-out all;
+
+    &.active {
+        @include transform-translate(100%, null);
+    }
 }
 
 @media (max-width: $screen-xs-min) {
@@ -22,6 +78,13 @@ body {
 }
 
 @media (min-width: $screen-md-min) {
+    // switch to sidebar nav
+    nav {
+        position: relative;
+        width: 20%;
+        float: left;
+        @include transform-translate(0, 0);
+    }
 
 }
 
