--- a/source/sass/pages/_base.scss
+++ b/source/sass/pages/_base.scss
@@ -1,6 +1,8 @@
 @import  '../mixins/variables';
 @import '../vendor/normalize';
 @import '../mixins/utilities';
+@import '../mixins/buttons';
+@import '../mixins/forms';
 @import '../mixins/base';
 
 
