--- a/source/sass/mixins/_utilities.scss
+++ b/source/sass/mixins/_utilities.scss
@@ -9,3 +9,63 @@
         clear: both;
     }
 }
+
+@mixin box-sizing($box-model) {
+    -webkit-box-sizing: $box-model; // Safari <= 5
+    -moz-box-sizing: $box-model; // Firefox <= 19
+    box-sizing: $box-model;
+}
+
+@mixin border-radius($radius) {
+    -webkit-border-radius: $radius;
+    border-radius: $radius;
+    background-clip: padding-box;  /* stops bg color from leaking outside the border: */
+}
+
+// Single side border-radius
+
+@mixin border-top-radius($radius) {
+    -webkit-border-top-right-radius: $radius;
+    border-top-right-radius: $radius;
+    -webkit-border-top-left-radius: $radius;
+    border-top-left-radius: $radius;
+    background-clip: padding-box;
+}
+@mixin border-right-radius($radius) {
+    -webkit-border-bottom-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+    -webkit-border-top-right-radius: $radius;
+    border-top-right-radius: $radius;
+    background-clip: padding-box;
+}
+@mixin border-bottom-radius($radius) {
+    -webkit-border-bottom-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+    -webkit-border-bottom-left-radius: $radius;
+    border-bottom-left-radius: $radius;
+    background-clip: padding-box;
+}
+@mixin border-left-radius($radius) {
+    -webkit-border-bottom-left-radius: $radius;
+    border-bottom-left-radius: $radius;
+    -webkit-border-top-left-radius: $radius;
+    border-top-left-radius: $radius;
+    background-clip: padding-box;
+}
+
+@mixin transform-translate($x, $y){
+    @if($x != null){
+        -webkit-transform: translateX($x);
+        -moz-transform   : translateX($x);
+        -o-transform     : translateX($x);
+        -ms-transform    : translateX($x);
+        transform        : translateX($x);
+    }
+    @if($y != null){
+        -webkit-transform: translateY($y);
+        -moz-transform   : translateY($y);
+        -o-transform     : translateY($y);
+        -ms-transform    : translateY($y);
+        transform        : translateY($y);
+    }
+}
