--- a/source/sass/pages/apply.scss
+++ b/source/sass/pages/apply.scss
@@ -51,6 +51,12 @@
     }
 }
 
+.step-household-adults {
+    .form-group {
+        margin: 0.5em 0;
+    }
+}
+
 @media (max-width: $screen-xs-min) {
 
 }
