--- a/esl/esl/templates/apply.html
+++ b/esl/esl/templates/apply.html
@@ -121,12 +121,10 @@
         </section>
         <form>
             <div class="form-group adults">
-                <label for="adult-name">{% trans 'Adult Full Name' %}</label>
-                <input class="form-control"  type="text" name="adult-name"/>
-            </div>
-            <div class="form-group adults">
-                <label for="adult-name">{% trans 'Adult Full Name' %}</label>
-                <input class="form-control"  type="text" name="adult-name"/>
+                <label for="adult-first-name">{% trans 'Adult First Name' %}</label>
+                <input class="form-control"  type="text" name="adult-first-name"/>
+                <label for="adult-last-name">{% trans 'Adult Last Name' %}</label>
+                <input class="form-control"  type="text" name="adult-last-name"/>
             </div>
 
             <div class="btn btn-success add-adult">
@@ -145,8 +143,10 @@
 
         <script type="x/esl-template" id="adult-full-name-template">
             <div class="form-group adults">
-                <label for="adult-name">{% trans 'Adult Full Name' %}</label>
-                <input class="form-control"  type="text" name="adult-name"/>
+                <label for="adult-first-name">{% trans 'Adult First Name' %}</label>
+                <input class="form-control"  type="text" name="adult-first-name"/>
+                <label for="adult-last-name">{% trans 'Adult Last Name' %}</label>
+                <input class="form-control"  type="text" name="adult-last-name"/>
             </div>
         </script>
     </section>
@@ -176,7 +176,7 @@
 
         <script type="x/esl-template" id="signing-adult-template">
             <label>
-                <input type="radio" name="programs" value="<%= adultName %>" <% if (selected) { %> checked="true" <% } %>/>
+                <input type="radio" name="programs" value="<%= uid %>" <% if (selected) { %> checked="true" <% } %>/>
                 <%= adultName %>
             </label>
         </script>
@@ -223,28 +223,67 @@
                 {% endblocktrans %}
             </p>
         </section>
-        <form>
+        <form data-adult-uid="">
             <h3 class="adult-name"></h3>
-            <div class="form-group adult-income">
+            <div class="form-group adult-work-income">
+                <h3>Work Income</h3>
                 <label>
-                    <input type="radio" name="income" value="monthly"/>
+                    <input type="radio" name="work-income-freq" value="monthly" checked="true"/>
                     {% trans 'Monthly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="twice-monthly"/>
+                    <input type="radio" name="work-income-freq" value="twice-monthly"/>
                     {% trans '2x Monthly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="biweekly"/>
+                    <input type="radio" name="work-income-freq" value="biweekly"/>
                     {% trans 'Bi-Weekly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="weekly"/>
+                    <input type="radio" name="work-income-freq" value="weekly"/>
                     {% trans 'Weekly' %}
                 </label>
+                <input class="form-control" type="text" name="work-income"/>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="income"/>
+            <div class="form-group adult-public-income">
+                <h3>Public Income</h3>
+                <label>
+                    <input type="radio" name="public-income-freq" value="monthly" checked="true"/>
+                    {% trans 'Monthly' %}
+                </label>
+                <label>
+                    <input type="radio" name="public-income-freq" value="twice-monthly"/>
+                    {% trans '2x Monthly' %}
+                </label>
+                <label>
+                    <input type="radio" name="public-income-freq" value="biweekly"/>
+                    {% trans 'Bi-Weekly' %}
+                </label>
+                <label>
+                    <input type="radio" name="public-income-freq" value="weekly"/>
+                    {% trans 'Weekly' %}
+                </label>
+                <input class="form-control" type="text" name="public-income"/>
+            </div>
+            <div class="form-group adult-other-income">
+                <h3>Other Income</h3>
+                <label>
+                    <input type="radio" name="other-income-freq" value="monthly" checked="true"/>
+                    {% trans 'Monthly' %}
+                </label>
+                <label>
+                    <input type="radio" name="other-income-freq" value="twice-monthly"/>
+                    {% trans '2x Monthly' %}
+                </label>
+                <label>
+                    <input type="radio" name="other-income-freq" value="biweekly"/>
+                    {% trans 'Bi-Weekly' %}
+                </label>
+                <label>
+                    <input type="radio" name="other-income-freq" value="weekly"/>
+                    {% trans 'Weekly' %}
+                </label>
+                <input class="form-control" type="text" name="other-income"/>
             </div>
         </form>
 
@@ -252,7 +291,7 @@
             <div class="btn btn-back">
                 <p>{% trans 'Back' %}</p>
             </div>
-            <div class="btn btn-next">
+            <div class="btn btn-next disabled">
                 <p>{% trans 'Next' %}</p>
             </div>
         </section>
@@ -271,15 +310,15 @@
         </section>
         <form>
             <div class="form-group children">
-                <label for="child-name">{% trans 'Child Full Name' %}</label>
-                <input class="form-control"  type="text" name="child-name"/>
-            </div>
-            <div class="form-group children">
-                <label for="child-name">{% trans 'Child Full Name' %}</label>
-                <input class="form-control"  type="text" name="child-name"/>
+                <label for="child-first-name">{% trans 'Child First Name' %}</label>
+                <input class="form-control"  type="text" name="child-first-name"/>
+                <label for="child-middle-initial">{% trans 'Child Middle Initial' %}</label>
+                <input class="form-control"  type="text" name="child-middle-initial"/>
+                <label for="child-last-name">{% trans 'Child Last Name' %}</label>
+                <input class="form-control"  type="text" name="child-last-name"/>
             </div>
 
-            <div class="btn btn-success">
+            <div class="btn btn-success add-child">
                 <p>{% trans '+ add child' %}</p>
             </div>
         </form>
@@ -288,15 +327,19 @@
             <div class="btn btn-back">
                 <p>{% trans 'Back' %}</p>
             </div>
-            <div class="btn btn-next">
+            <div class="btn btn-next disabled">
                 <p>{% trans 'Next' %}</p>
             </div>
         </section>
 
-        <script type="x/esl-template" id="child-full-name-template">
+        <script type="x/esl-template" id="child-name-template">
             <div class="form-group children">
-                <label for="child-name">{% trans 'Child Full Name' %}</label>
-                <input class="form-control"  type="text" name="child-name"/>
+                <label for="child-first-name">{% trans 'Child First Name' %}</label>
+                <input class="form-control"  type="text" name="child-first-name"/>
+                <label for="child-middle-initial">{% trans 'Child Middle Initial' %}</label>
+                <input class="form-control"  type="text" name="child-middle-initial"/>
+                <label for="child-last-name">{% trans 'Child Last Name' %}</label>
+                <input class="form-control"  type="text" name="child-last-name"/>
             </div>
         </script>
     </section>
@@ -306,7 +349,6 @@
             <h1>
                 {% trans "Child Circumstance" %}
             </h1>
-            <h2><span class="child-name"></span></h2>
             <p class="body-text">
                 {% blocktrans %}
                     Do any of the following options describe
@@ -317,8 +359,9 @@
                 {% endblocktrans %}
             </p>
         </section>
-        <form>
-            <div class="form-group child-circumstance">
+        <form data-child-uid="">
+            <h3 class="child-name"></h3>
+            <div class="form-group child-circumstances">
                 <input class="form-control" type="checkbox" name="student"/>
                 <label for="student">{% trans 'Student' %}</label>
                 <input class="form-control" type="checkbox" name="foster"/>
@@ -334,7 +377,7 @@
             <div class="btn btn-back">
                 <p>{% trans 'Back' %}</p>
             </div>
-            <div class="btn btn-next">
+            <div class="btn btn-next disabled">
                 <p>{% trans 'Next' %}</p>
             </div>
         </section>
@@ -343,12 +386,11 @@
     <section class="step step-children-income" data-step="CHILDREN_INCOME">
         <section class="instructions">
             <h1>
-                {% trans "Child Income" %}
+                {% trans "Children Income" %}
             </h1>
             <p class="body-text">
                 {% blocktrans %}
-                    Please estimate the income for each child in your household, one at a time.
-                    How much money does <span class="child-name"></span> make?
+                    Please estimate the TOTAL income for ALL children in your household.
                 {% endblocktrans %}
             </p>
         </section>
@@ -356,23 +398,21 @@
             <h3 class="child-name"></h3>
             <div class="form-group child-income">
                 <label>
-                    <input type="radio" name="income" value="monthly"/>
+                    <input type="radio" name="income-freq" value="monthly" checked="true"/>
                     {% trans 'Monthly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="twice-monthly"/>
+                    <input type="radio" name="income-freq" value="twice-monthly"/>
                     {% trans '2x Monthly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="biweekly"/>
+                    <input type="radio" name="income-freq" value="biweekly"/>
                     {% trans 'Bi-Weekly' %}
                 </label>
                 <label>
-                    <input type="radio" name="income" value="weekly"/>
+                    <input type="radio" name="income-freq" value="weekly"/>
                     {% trans 'Weekly' %}
                 </label>
-            </div>
-            <div class="form-group">
                 <input class="form-control" type="text" name="income"/>
             </div>
         </form>
@@ -381,7 +421,7 @@
             <div class="btn btn-back">
                 <p>{% trans 'Back' %}</p>
             </div>
-            <div class="btn btn-next">
+            <div class="btn btn-next disabled">
                 <p>{% trans 'Next' %}</p>
             </div>
         </section>
@@ -400,7 +440,7 @@
             </h2>
             <p class="body-text">
                 {% blocktrans %}
-                    This information helps to make sure we are fully serving our communty.
+                    This information helps to make sure we are fully serving our community.
                     Responding to this section is <span class="underline">optional</span> and
                     does not affect your children's eligibility for free or reduced priced meals.
                 {% endblocktrans %}
@@ -457,6 +497,31 @@
             </p>
         </section>
         <form>
+            <div class="form-group">
+                <label for="street-address">{% trans 'Street Address' %}</label>
+                <input class="form-control"  type="text" name="street-address"/>
+            </div>
+            <div class="form-group">
+                <label for="city">{% trans 'City' %}</label>
+                <input class="form-control"  type="text" name="city"/>
+            </div>
+            <div class="form-group">
+                <label for="state">{% trans 'State' %}</label>
+                <input class="form-control"  type="text" name="state"/>
+            </div>
+            <div class="form-group">
+                <label for="zip-code">{% trans 'Zip Code' %}</label>
+                <input class="form-control"  type="text" name="zip-code"/>
+            </div>
+            <div class="form-group">
+                <label for="phone-number">{% trans 'Phone Number' %}</label>
+                <input class="form-control"  type="text" name="phone-number"/>
+            </div>
+            <div class="form-group">
+                <label for="email">{% trans 'Email' %}</label>
+                <input class="form-control"  type="email" name="email"/>
+            </div>
+
 
         </form>
 
@@ -508,14 +573,21 @@
             </p>
         </section>
         <form>
-
+            <div class="form-group">
+                <label for="full-name">{% trans 'Full Name' %}</label>
+                <input class="form-control"  type="text" name="full-name"/>
+            </div>
+            <div class="form-group">
+                <label for="date">{% trans "Today's Date" %}</label>
+                <input class="form-control"  type="text" name="date" value="{% now 'Y-m-d' %}" disabled="disabled"/>
+            </div>
         </form>
 
         <section class="form-nav">
             <div class="btn btn-back">
                 <p>{% trans 'Back' %}</p>
             </div>
-            <div class="btn btn-next">
+            <div class="btn btn-next disabled">
                 <p>{% trans 'Next' %}</p>
             </div>
         </section>
@@ -541,7 +613,7 @@
                 <p>{% trans 'Back' %}</p>
             </div>
             <div class="btn btn-next">
-                <p>{% trans 'Next' %}</p>
+                <p>{% trans 'Finish' %}</p>
             </div>
         </section>
     </section>
