updating form styles

--- a/esl/esl/templates/base.html
+++ b/esl/esl/templates/base.html
@@ -21,6 +21,7 @@
         <![endif]-->
         <section class="main-wrapper">
             <header class="global-header">
+                <i class="material-icons help">help_outline</i>
                 <p class="steps">
                     {% trans 'Step' %}<span class="current-step"></span>
                     <span class="step-of">{% trans 'of' %}</span>
