--- a/source/sass/mixins/_variables.scss
+++ b/source/sass/mixins/_variables.scss
@@ -15,7 +15,7 @@ $blue-light: #e4f5f7;
 $blue-gray: #c6dee1;
 $orange: #ff5722;
 $gray-dark: #727272;
-$gray: #b5b5b5;
+$gray: #a4a4a4;
 $gray-light: #f4f4f4;
 $off-black: #212121;
 
