--- a/source/sass/mixins/_base.scss
+++ b/source/sass/mixins/_base.scss
@@ -21,19 +21,45 @@ body {
 }
 
 .global-header {
-    background-color: $blue-gray;
+    background-color: $blue-light;
     border: 1px solid $blue-gray;
     width: 100%;
     height: 4.5em;
-    @include clearfix();
+    position: relative;
+
+    .help {
+        display: none;
+        font-size: 3em;
+        color: $blue-dark;
+        position: absolute;
+        left: 0.5em;
+        top: 0.25em;
+
+        &:hover {
+            cursor: pointer;
+            color: $blue;
+        }
+    }
 
     .steps {
-        float: left;
+        width: 100%;
+        text-align: center;
         display: none;
         font-family: 'Source Sans Pro', sans-serif;
         font-weight: 400;
-        font-size: 1.1em;
+        font-size: 1em;
         color: $gray-dark;
+        margin: 1.5em 0;
+
+        .current-step {
+            margin: 0 0.1em;
+            display: inline-block;
+        }
+
+        .steps-of {
+            margin: 0 0.1em;
+            display: inline-block;
+        }
     }
 }
 
